--- a/previsao_gastos_nubank.Rmd
+++ b/previsao_gastos_nubank.Rmd
@@ -4,17 +4,11 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-setwd("~/Desktop/nubank")
+setwd("~/git/previsaoGastosNubank")
 library(readr)
-# Importando vários arquivos simultaneamente
-list.files()
-lista_arquivos <- list.files('~/Desktop/nubank', full.names = TRUE)
-class(lista_arquivos)
-lista_arquivos
-lista_arquivos2 <- lapply(lista_arquivos, read_csv)
-class(lista_arquivos2)
-View(lista_arquivos2)
-lista_arquivos2
-
+library(dplyr)
+source("codigos/carregar_varios_arquivos_csv_simultaneamente.R")
+gastos <- as.data.frame(lista_arquivos2[47])
+gastos %>% filter(amount > 0) %>% arrange(desc(amount))
 ```
 
